--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,6 @@ pipeline {
 
     environment {
         IMAGE_NAME = 'santhoshadmin/java-task' // Docker image name for the Java application
-        SONAR_URL = 'http://164.52.204.161:9000' // SonarQube server URL
     }
 
     stages {
@@ -11,31 +10,6 @@ pipeline {
             steps {
                 // Checkout the code from the main branch
                 git branch: 'main', url: 'https://github.com/ssanthosh2k3/task-manager.git'
-            }
-        }
-
-        stage('SonarQube Analysis') {
-            steps {
-                script {
-                    withCredentials([string(credentialsId: 'sonar-tok', variable: 'SONAR_TOKEN')]) {
-                        try {
-                            // Run SonarQube scanner inside Docker container
-                            sh '''
-                            docker run --rm \
-                            -v $(pwd):/usr/src \
-                            -w /usr/src \
-                            sonarsource/sonar-scanner-cli \
-                            sonar-scanner \
-                            -Dsonar.projectKey=task-manager \
-                            -Dsonar.sources=. \
-                            -Dsonar.host.url=${SONAR_URL} \
-                            -Dsonar.login=${SONAR_TOKEN}
-                            '''
-                        } catch (Exception e) {
-                            error "SonarQube analysis failed: ${e.message}"
-                        }
-                    }
-                }
             }
         }
 
@@ -68,7 +42,7 @@ pipeline {
                     docker run --rm \
                     -v /var/run/docker.sock:/var/run/docker.sock \
                     aquasec/trivy \
-                    image --severity HIGH,CRITICAL ${IMAGE_NAME}:${env.BUILD_ID} --debug
+                    image --severity HIGH,CRITICAL ${IMAGE_NAME}:${env.BUILD_ID}
                     """
                 }
             }
@@ -111,11 +85,6 @@ pipeline {
     post {
         always {
             cleanWs() // Clean workspace after the job is complete
-        }
-        failure {
-            // Log an error message when the build fails
-            echo 'The build has failed. Please check the logs for more details.'
-            // Optionally, add email notifications or other actions here
         }
     }
 }
