--- a/jenkinsfile
+++ b/jenkinsfile
@@ -45,6 +45,12 @@ pipeline {
                     aquasec/trivy \
                     image --severity HIGH,CRITICAL --output trivy_report.json ${IMAGE_NAME}:${env.BUILD_ID}
                     """
+
+                    // Display a summary of vulnerabilities in the console
+                    echo 'Displaying summary of Trivy scan results:'
+                    sh """
+                    cat trivy_report.json | jq '.[] | {Vulnerability: .VulnerabilityID, Severity: .Severity, InstalledVersion: .InstalledVersion, FixedVersion: .FixedVersion}'
+                    """
                 }
             }
         }
