--- a/jenkinsfile
+++ b/jenkinsfile
@@ -48,9 +48,7 @@ pipeline {
 
                     // Display a summary of vulnerabilities in the console
                     echo 'Displaying summary of Trivy scan results:'
-                    sh """
-                    cat trivy_report.json | jq -r '.[] | "\(.VulnerabilityID) - Severity: \(.Severity)"'
-                    """
+                    sh 'cat trivy_report.json | jq -r \'.[] | "\\(.VulnerabilityID) - Severity: \\(.Severity)"\''
                 }
             }
         }
