--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
       <java.version>11</java.version>
       <spring.boot.version>2.5.4</spring.boot.version>
       <junit.jupiter.version>5.7.0</junit.jupiter.version>
+      <sonar.maven.plugin.version>3.9.1</sonar.maven.plugin.version> <!-- SonarQube Maven plugin version -->
   </properties>
   <dependencies>
     <dependency>
@@ -97,6 +98,12 @@
           <target>${java.version}</target>
         </configuration>
       </plugin>
+      <!-- Add SonarQube plugin -->
+      <plugin>
+        <groupId>org.sonarsource.scanner.maven</groupId>
+        <artifactId>sonar-maven-plugin</artifactId>
+        <version>${sonar.maven.plugin.version}</version>
+      </plugin>
     </plugins>
   </build>
 
@@ -111,4 +118,3 @@
         </snapshotRepository>
     </distributionManagement>
 </project>
-
