--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,6 +23,23 @@ pipeline {
             }
         }
 
+        stage('SonarQube Code Analysis') {
+            steps {
+                script {
+                    // Run the SonarQube scanner for code analysis
+                    withSonarQubeEnv('sonar') { // Ensure 'sonar' matches your SonarQube instance name in Jenkins
+                        sh """
+                        mvn clean verify sonar:sonar \
+                          -Dsonar.projectKey=task-manager \
+                          -Dsonar.projectName='task-manager' \
+                          -Dsonar.host.url=http://164.52.204.161:9000 \
+                          -Dsonar.token=${SONAR_TOKEN}
+                        """
+                    }
+                }
+            }
+        }
+
         stage('Build Docker Image') {
             steps {
                 script {
