--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,6 +4,7 @@ pipeline {
     environment {
         IMAGE_NAME = 'santhoshadmin/java-task' // Docker image name for the Java application
         SONAR_TOKEN = credentials('sonar-tok') // SonarQube token
+        KUBE_TOKEN = credentials('kube-token') // Kubernetes service account token
     }
 
     stages {
@@ -75,6 +76,18 @@ pipeline {
                         docker push ${IMAGE_NAME}:latest
                         """
                     }
+                }
+            }
+        }
+
+        stage('Deploy to Kubernetes') {
+            steps {
+                script {
+                    // Deploy the new image to the Kubernetes cluster
+                    sh """
+                    echo 'Deploying the Docker image to Kubernetes...'
+                    kubectl set image deployment/task-manager task-manager=${IMAGE_NAME}:latest --namespace=taskmanager --token=${KUBE_TOKEN}
+                    """
                 }
             }
         }
